Fixed area_thesaurus CSS and layout issues. Re-factorized ts_object JS for easy use (moved render functions to new file render_ts_object.js)

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -195,10 +195,117 @@
 		// 	padding-left: 0.5em;
 		// }
 
+		// label
+		>.label {
+			// background-color: #fffce9;
+			padding: 1rem;
+			padding-bottom: 0px;
+			padding-top: 0.5rem;
+			// flex: 1 0 calc(20% - 2em);
+			flex: 1 1 100%;
+
+			// color: #7c7c7c;
+
+			letter-spacing: 0.5px;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
+			cursor: default;
+			// font-family: Oxygen,"Helvetica Neue",Helvetica,Arial,sans-serif;
+			font-weight: 300;
+			// color: @color_grey_dark; // #9e9e9e;
+			// color: inherit;
+		}//end >.label
+
+		// buttons_container
+		>.buttons_container {
+			background-color: @color_orange_dedalo;
+			display: none;
+			flex: 0 1 1em;
+			// padding: 0; // 0.15em;
+			// padding-top: 0.5em;
+			position: absolute;
+			// top: 0;
+			// width: 2em;
+			// min-height: 100%;
+			// left: 100%;
+			z-index: 1;
+			// box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
+			// border-top-right-radius: 0.25em;
+			// border-bottom-right-radius: 0.25em;
+
+			// background: linear-gradient(90deg, rgba(251,148,44,1) 0%, rgba(247,138,28,1) 100%);
+			// top: -1px;
+			// min-height: calc(100% + 2px);
+			// box-shadow: 2px 0 5px 0 rgba(38, 38, 38, 0.3);
+
+			// shadow: light line at top
+			// box-shadow: 0px -1px 0px 1px rgb(244 157 70);
+			box-shadow: 0px 0px 0px 1px #f49d46;
+
+			right: 0px;
+			width: auto;
+			// padding: 0.5rem;
+			padding: 0px;
+			// padding-bottom: 0px;
+			// top: -2rem;
+			top: -2rem;
+			max-height: 2rem;
+			border-top-left-radius: 0.25em;
+			border-top-right-radius: 0.25em;
+			font-size: 1.1rem;
+
+			// &.left {
+			// 	left: -2rem;
+			// 	box-shadow: -2px 0 5px 0 rgb(38 38 38 / 30%);
+			// 	border-radius: unset;
+			// 	border-top-left-radius: 0.25em;
+			// 	border-bottom-left-radius: 0.25em;
+			// }
+
+			.buttons_fold {
+				// position: -webkit-sticky;
+				// position: sticky;
+				// margin: 0;
+				// top: 68px;
+				// @media screen and (max-width: @width_break_point_1) {
+				// 	top: 0.5rem;
+				// }
+			}
+
+			// buttons inside
+			span {
+				margin-left: 0.5em;
+				margin-bottom: 0.45em;
+				margin-top: 0.45rem;
+
+				&:first-child {
+					margin-left: 0.75rem;
+				}
+				&:last-child {
+					margin-right: 0.75rem;
+				}
+			}
+		}//end >.buttons_container
+
+		// content_data
 		>.content_data {
 			color: @color_grey_ultradark; // #9e9e9e;
 			height: inherit;
-		}
+			// background-color: #B9DFF6;
+			// flex: 1 0 calc(80% - 2em);
+			display: flex;
+			// flex: 1 1 auto;
+			flex: 1 1 100%;
+			flex-wrap: wrap;
+			//flex-flow: column;
+			align-items: flex-start;
+			align-content: flex-start;
+			padding: 1em;
+			padding-top: 0.5em;
+			// overflow: hidden;
+		}//end >.content_data
+
 
 		&.edit, &.search, &.player {
 			// grey line left and down of wrapper
@@ -394,28 +501,6 @@
 				// }
 			}
 
-
-			>.label {
-				// background-color: #fffce9;
-				padding: 1rem;
-				padding-bottom: 0px;
-				padding-top: 0.5rem;
-				// flex: 1 0 calc(20% - 2em);
-				flex: 1 1 100%;
-
-				// color: #7c7c7c;
-
-				letter-spacing: 0.5px;
-				text-overflow: ellipsis;
-				overflow: hidden;
-				white-space: nowrap;
-				cursor: default;
-				// font-family: Oxygen,"Helvetica Neue",Helvetica,Arial,sans-serif;
-				font-weight: 300;
-				// color: @color_grey_dark; // #9e9e9e;
-				// color: inherit;
-			}//end >.label
-
 			>.top {
 				display: flex;
 				// background-color: bisque;
@@ -440,90 +525,7 @@
 				}
 			}//end >.top
 
-			>.buttons_container {
-				background-color: @color_orange_dedalo;
-				display: none;
-				flex: 0 1 1em;
-				// padding: 0; // 0.15em;
-				// padding-top: 0.5em;
-				position: absolute;
-				// top: 0;
-				// width: 2em;
-				// min-height: 100%;
-				// left: 100%;
-				z-index: 1;
-				// box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
-				// border-top-right-radius: 0.25em;
-				// border-bottom-right-radius: 0.25em;
-
-				// background: linear-gradient(90deg, rgba(251,148,44,1) 0%, rgba(247,138,28,1) 100%);
-				// top: -1px;
-				// min-height: calc(100% + 2px);
-				// box-shadow: 2px 0 5px 0 rgba(38, 38, 38, 0.3);
-
-				// shadow: light line at top
-				// box-shadow: 0px -1px 0px 1px rgb(244 157 70);
-				box-shadow: 0px 0px 0px 1px #f49d46;
-
-				right: 0px;
-				width: auto;
-				// padding: 0.5rem;
-				padding: 0px;
-				// padding-bottom: 0px;
-				// top: -2rem;
-				top: -2rem;
-				max-height: 2rem;
-				border-top-left-radius: 0.25em;
-				border-top-right-radius: 0.25em;
-				font-size: 1.1rem;
-
-				// &.left {
-				// 	left: -2rem;
-				// 	box-shadow: -2px 0 5px 0 rgb(38 38 38 / 30%);
-				// 	border-radius: unset;
-				// 	border-top-left-radius: 0.25em;
-				// 	border-bottom-left-radius: 0.25em;
-				// }
-
-				.buttons_fold {
-					// position: -webkit-sticky;
-					// position: sticky;
-					// margin: 0;
-					// top: 68px;
-					// @media screen and (max-width: @width_break_point_1) {
-					// 	top: 0.5rem;
-					// }
-				}
-
-				// buttons inside
-				span {
-					margin-left: 0.5em;
-					margin-bottom: 0.45em;
-					margin-top: 0.45rem;
-
-					&:first-child {
-						margin-left: 0.75rem;
-					}
-					&:last-child {
-						margin-right: 0.75rem;
-					}
-				}
-			}//end >.buttons_container
-
-
 			>.content_data {
-				// background-color: #B9DFF6;
-				// flex: 1 0 calc(80% - 2em);
-				display: flex;
-				// flex: 1 1 auto;
-				flex: 1 1 100%;
-				flex-wrap: wrap;
-				//flex-flow: column;
-				align-items: flex-start;
-				align-content: flex-start;
-				padding: 1em;
-				padding-top: 0.5em;
-				// overflow: hidden;
 
 				.list & {
 					padding: 0px;
@@ -1092,54 +1094,6 @@
 
 		.json-key {
 			word-break: initial;
-		}
-	}
-
-
-
-// content_data area
-	.content_data.area {
-		label {
-			padding: 0.5em;
-		}
-		input {
-			width: auto;
-			height: 2.5em;
-			padding: 0.5em;
-			margin: 0px;
-			margin-top: 0.5em;
-			margin-bottom: 0.5em;
-			margin-right: 0.5em;
-			// border: 1px solid #dadada;
-			// border-radius: 2px;
-			// font-size: 1em;
-		}
-		button {
-			&.border {
-				border: 1px solid #dadada;
-			}
-			display: inline-block;
-			font-size: 1em;
-		}
-
-	// forms (area thesaurus)
-		.form_container {
-			padding-top: 1em;
-
-			input {
-				width: 100%;
-				&.mandatory {
-					border-left: 2px solid red;
-
-					&.empty {
-						border-right: 2em solid red;
-					}
-				}
-			}
-
-			button {
-				border: 1px solid #dadada;
-			}
 		}
 	}
 
